--- a/main.tex
+++ b/main.tex
@@ -22,14 +22,21 @@ For the implementation of this project, a simple application was created allowin
 
 The images chosen are diverse Latin alphabet handwriting styles including the generic modern handwriting found in the EMNIST data sets. The images of this text are converted using the PIL library to a similar size to that of the individual image files in the EMNIST database. From here, if they are a part of a larger or more popular writing style, the images will be fed into a convolutional neural network module which will perform the training and measure accuracy as it goes. If the accuracy is satisfactory, the resulting computer vision system will be made accessible to the AI implemented by MCP. Small fluctuations in accuracy do occur in each run of the program. If the text is from a smaller dataset then the necessary labelling is performed manually and text processing is attempted with the unmonitored clustering method. This provides far less accuracy, but the system still provides an output. This involves the same image processing steps as convolutional neural networks and also may be used by the AI. The text is output on the simple user interface in the same manner regardless of whichever computer vision system the AI chose to use.
 
-By connecting these systems through the Model Context Protocol, this project demonstrates how new AI architectures can expand beyond the limited capabilities of individual datasets and models to form expandable systems for complex computer vision tasks. Future developments may include the implementation of more complex output with potential areas of inaccuracy, such as typos analyzed and identified by a program linked to a dictionary dataset, and the continuous integration of more and more computer vision systems.
+By connecting these systems through the Model Context Protocol (MCP), this project demonstrates how new AI architectures can expand beyond the limited capabilities of individual datasets and models to form expandable systems for complex computer vision tasks. The Model Context Protocol is a standardized way to connect AI applications to external tools and data sources\cite{modelContextProtocol/getting-started/intro}. MCP allows an AI model to act as a client connecting to servers that each host a different computer vision system. The AI receives tool descriptions from each server and determines which tool to use based on the handwriting style. The server processes the image and returns the recognized text. Future developments may include the implementation of more complex output with potential areas of inaccuracy, such as typos analyzed and identified by a program linked to a dictionary dataset, and the continuous integration of more and more computer vision systems.
 \section{Related Works}
 \subsection*{Computer Vision Methods}
 Within the AI field of computer vision, one popular goal is the transcription of handwritten text. By different organizations, this is called handwriting recognition technology or Handwritten Text Recognition (HTR). Researchers implemented a convolutional neural network system was utilized to build a computer vision system able to recognize digits from the MNIST and achieve accuracy of up to 100\% on the number 1 in the test data\cite{10.1145/3727648.3727679}. Essentially a convolutional neural network uses a combination of a single input layer then convolution layers that create feature maps, pooling layers that decrease data, and fully connected layers to create and process feature maps from images and fully connected layers that link the neurons to each of the potential final output results\cite{10.1145/3727648.3727679}. The created convolutional neural network is able to receive further input images and can assign a label to them based on what it interprets the image to be. These are very effective systems when a large, thoroughly labeled, dataset is available, but according to the research focused on obscure texts, specifically a medieval book with a Runic script known as the \emph{Codex Runicus}, there are issues with methods like convolutional neural networks, and recurrent neural networks because they require deep learning that involves these vast labeled datasets inaccessible to some less common scripts and styles\cite{10.1145/3519306}. Alternative options that did not involve deep learning were studied and implemented to accurately transcribe segments of the \emph{Codex Runicus}. While doing this, they used learning free methods such as unsupervised clustering which creates clusters which are subdivided, then the labels of each cluster are propagated through the other symbols, and the few-shot classification method which seeks to represent each individual symbol as a node in a graph and compare similarity between each pair of symbols\cite{10.1145/3519306}. With modern methods, it is very possible to perform highly accurate machine learning for popular fonts and styles but the pursuit of handwritten text recognition for any obscure text may result in lower accuracy systems that avoid machine learning methods. These methods may all be used to accomplish similar tasks but at different scales, when attempting to transcribe a frequently used writing style with a large, labeled database available. a convolutional neural network should always be used. 
 
 \subsection*{Datasets}
 
-There are several different frequently implemented datasets for handwritten text recognition computer vision. As was seen in the implementation of a high accuracy convolutional neural network, the MNIST is a dataset used in computer vision systems\cite{10.1145/3727648.3727679}. This is a popular data set used for testing computer vision systems provided by the National Institute of Standards and Technology consisting of 70,000 grayscale images of 28 by 28 pixel digits\cite{10.1145/3727648.3727679}. Because the text is labelled accurately and organized, it allows for easy implementation of computer vision systems, but to add further data to a dataset like this or use the output computer vision system  to analyze another image, it would have to be processed similarly, a task that is much more complicated. On the NIST website for another dataset, the EMNIST, documentation clarifies that  this new data set includes images of characters from a-z in the same grayscale 28 by 28 pixel format used by the MNIST dataset\cite{7966217}. Each character in the dataset is labelled with its ASCII value. This makes many methods described for the other computer vision system very easily applicable to this extended version of the dataset they had used. More broadly, datasets are accessible for many written styles and languages, and complications only seem to arise when pursuing data sets for languages and styles that are rarely used.
+There are several different frequently implemented datasets for handwritten text recognition computer vision. As was seen in the implementation of a high accuracy convolutional neural network, the MNIST is a dataset used in computer vision systems\cite{10.1145/3727648.3727679}. This is a popular data set used for testing computer vision systems provided by the National Institute of Standards and Technology consisting of 70,000 grayscale images of 28 by 28 pixel digits\cite{10.1145/3727648.3727679}. Because the text is labelled accurately and organized, it allows for easy implementation of computer vision systems, but to add further data to a dataset like this or use the output computer vision system  to analyze another image, it would have to be processed similarly, a task that is much more complicated. On the NIST website for another dataset, the EMNIST, documentation clarifies that  this new data set includes images of characters from a-z in the same grayscale 28 by 28 pixel format used by the MNIST dataset\cite{7966217}. Each character in the dataset is labelled with its ASCII value. This makes many methods described for the other computer vision system very easily applicable to this extended version of the dataset they had used. The CHoiCe (Complex Handwritten Character) dataset is a collection of primarily cursive characters formatted similarly to the EMNIST\cite{CHoiCeDataset}. The images are 28 by 28 pixels with white text on a black background, but unlike EMNIST, the characters are not rotated or mirrored, allowing for much simpler image processing when preparing input images for the trained model. Figure \ref{fig:emnist_vs_choice} shows a comparison between EMNIST lowercase "b" samples (top row) and CHoiCe cursive "b" samples (bottom row), demonstrating the significant stylistic differences between isolated print characters and cursive characters extracted from continuous handwriting. More broadly, datasets are accessible for many written styles and languages, and complications only seem to arise when pursuing data sets for languages and styles that are rarely used.
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.5\textwidth]{ProjectCode/CHoiCe-Dataset/4.png}
+    \caption{Comparison of EMNIST lowercase "b" samples (top row) and CHoiCe cursive "b" samples (bottom row)\cite{CHoiCeDataset}. Note that within the dataset image files, the CHoiCe data appears to be white with black text.}
+    \label{fig:emnist_vs_choice}
+\end{figure}
 
 The preparation of images for computer vision is a complex process involving simplifying images and often storing them on a gray scale. As was seen with the EMNIST images, they were represented in gray scale with gray scale pixels. Additionally, a gaussian blur smoothed the image, ROI Extraction Centered Frame, and resizing and resampling were applied to ensure that the images were the correct consistent size and had the proper shading\cite{7966217}. The final result was images with white text with pixels blurred into a black background along the edges of the letters. In implementations of interactive image measurement software using Tkinter and PIL libraries from Python, researchers showed how tools may be used to perform the individual tasks implemented for the EMNIST database\cite{10.1145/3727648.3727740}. They explain that the Python PIL libraries may be used to perform image processing such as grayscale conversion, Gaussian blur, image sharpening, binarization and more\cite{10.1145/3727648.3727740}. The PIL package in Python could effectively be used for the preparation of images for EMNIST computer vision systems. The same methods could also be easily implemented to feed images into the output computer vision systems during their implementation.
 \subsection*{Model Context Protocol}
@@ -123,7 +130,7 @@ The next section of the results will show how different text styles were success
 \section{Conclusion}
 This project demonstrates the potential of integrating multiple specialized computer vision systems into a single, adaptive AI framework for handwriting recognition. By redirecting input images to the most suitable model, the system overcomes the limitations of single computer vision system strategies. The design provides a foundation for expansion as new models are developed. The result is a flexible, scalable handwriting recognition system capable of evolving as more computer vision systems are added.
 
-Several improvements could enhance this system in future development. First, the cursive segmentation algorithm could be improved by implementing machine learning-based approaches that learn to identify character boundaries from training data rather than relying on simple column-based gap detection. Recurrent neural networks or transformer architectures could potentially learn the patterns of cursive connections and identify where one character ends and another begins. Second, ligature recognition could be implemented to handle common letter combinations that are written as connected units. Ligatures like "ff", "fi", "fl", and "th" appear frequently in both cursive and historical handwriting, where adjacent letters merge into single glyphs. Training the system to recognize these combined forms rather than attempting to segment them into individual characters could improve accuracy for cursive and historical texts. Third, the CHoiCe model accuracy could be improved by data augmentation techniques such as rotating, scaling, and adding noise to training images to artificially expand the small dataset. Despite the poor accuracy results from the CHoiCe system, this work demonstrates the importance of specialized character recognition for different handwriting styles. A general-purpose model trained only on modern handwriting cannot adequately handle historical scripts, and the MCP architecture allows these specialized models to coexist and be selected appropriately. Fourth, a confidence-based fallback system could be implemented where if one model returns low confidence scores, the system automatically tries alternative models and compares results. Fifth, post-processing with dictionary lookup could correct obvious spelling errors by comparing recognized text against known words and suggesting corrections. Sixth, the system could be expanded to handle non-Latin scripts by training additional models on datasets for Cyrillic, Arabic, Chinese, and other writing systems. Seventh, support for historical fonts with different letter forms could be added. Many historical documents use letter forms that differ significantly from modern writing, such as the long s (ſ) that resembles an "f", blackletter scripts with angular letterforms, or early printing typefaces with distinct character shapes. Training specialized models to recognize these historical letter forms would enable transcription of a wider range of archival documents. Finally, a web-based interface could make the system more accessible by allowing users to upload images directly through a browser rather than requiring local file paths.
+Several improvements could enhance this system in future development. First, the cursive segmentation algorithm could be improved by implementing machine learning-based approaches that learn to identify character boundaries from training data rather than relying on simple column-based gap detection. Recurrent neural networks or transformer architectures could potentially learn the patterns of cursive connections and identify where one character ends and another begins. Second, ligature recognition could be implemented to handle common letter combinations that are written as connected units. Ligatures like "ff", "fi", "fl", and "th" appear frequently in both cursive and historical handwriting, where adjacent letters merge into single glyphs. Training the system to recognize these combined forms rather than attempting to segment them into individual characters could improve accuracy for cursive and historical texts. Third, the CHoiCe model accuracy could be improved by data augmentation techniques such as rotating, scaling, and adding noise to training images to artificially expand the small dataset. Despite the poor accuracy results from the CHoiCe system, this work demonstrates the importance of specialized character recognition for different handwriting styles. A general-purpose model trained only on modern handwriting cannot adequately handle historical scripts, and the MCP architecture allows these specialized models to coexist and be selected appropriately. Fourth, a confidence-based fallback system could be implemented where if one model returns low confidence scores, the system automatically tries alternative models and compares results. Fifth, post-processing with dictionary lookup could correct obvious spelling errors by comparing recognized text against known words and suggesting corrections. Sixth, the system could be expanded to handle non-Latin scripts by training additional models on datasets for Cyrillic, Arabic, Chinese, and other writing systems. Seventh, support for historical fonts with different letter forms could be added. Many historical documents use letter forms that differ significantly from modern writing, such as the long s that resembles an "f", blackletter scripts with angular letterforms, or early printing typefaces with distinct character shapes. Training specialized models to recognize these historical letter forms would enable transcription of a wider range of archival documents. Finally, a web-based interface could make the system more accessible by allowing users to upload images directly through a browser rather than requiring local file paths.
 \bibliographystyle{acm}
 \bibliography{bibliography.bib}
 
